{
  "version": 4,
  "terraform_version": "0.12.0",
  "serial": 6,
  "lineage": "d7247147-1da5-00f3-bf61-b540f1b19ffe",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sentry-arachnys-task",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0885b1f6bd170450c",
            "arn": "arn:aws:ec2:us-east-1:058891558838:instance/i-0a33f51db299076cc",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a33f51db299076cc",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "myappkeypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04b0f9fcdcea4bb5c",
            "private_dns": "ip-172-31-13-143.ec2.internal",
            "private_ip": "172.31.13.143",
            "public_dns": "ec2-3-235-233-119.compute-1.amazonaws.com",
            "public_ip": "3.235.233.119",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0add2321bcfbdd87f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-009bc0633d4709a36",
              "sg-0c575ff25d28facb1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-23aa2345",
            "tags": {
              "Name": "sentry-arachnys-task"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-009bc0633d4709a36",
              "sg-0c575ff25d28facb1"
            ]
          },
          "depends_on": [
            "aws_security_group.allow_ssh",
            "aws_security_group.web_server"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058891558838:security-group/sg-0c575ff25d28facb1",
            "description": "Allow inbound SSH traffic from my IP",
            "egress": [],
            "id": "sg-0c575ff25d28facb1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_all",
            "name_prefix": "",
            "owner_id": "058891558838",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow SSH"
            },
            "timeouts": null,
            "vpc_id": "vpc-ecc86d91"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_server",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058891558838:security-group/sg-009bc0633d4709a36",
            "description": "Allow HTTP and HTTPS traffic in, browser access out.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-009bc0633d4709a36",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "web server",
            "name_prefix": "",
            "owner_id": "058891558838",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow HTTPS"
            },
            "timeouts": null,
            "vpc_id": "vpc-ecc86d91"
          }
        }
      ]
    }
  ]
}